--- a/service.html
+++ b/service.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Builderz - Construction Company Website Template</title>
+        <title>LOANA REALTY AND ENGINEERING CO LTD</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -36,7 +36,7 @@
                         <div class="col-lg-4 col-md-12">
                             <div class="logo">
                                 <a href="index.html">
-                                    <h1>Builderz</h1>
+                                    <h1>LOANA</h1>
                                     <!-- <img src="img/logo.jpg" alt="Logo"> -->
                                 </a>
                             </div>
@@ -50,7 +50,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Opening Hour</h3>
-                                            <p>Mon - Fri, 8:00 - 9:00</p>
+                                            <p>Mon - Fri, 8:00 AM- 9:00 PM</p>
                                         </div>
                                     </div>
                                 </div>
@@ -61,7 +61,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Call Us</h3>
-                                            <p>+012 345 6789</p>
+                                            <p>+256 780245409</p>
                                         </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                                         </div>
                                         <div class="top-bar-text">
                                             <h3>Email Us</h3>
-                                            <p>info@example.com</p>
+                                            <p>alemibless@gmail.com</p>
                                         </div>
                                     </div>
                                 </div>
@@ -395,8 +395,8 @@
                             <div class="footer-contact">
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
-                                <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                                <p><i class="fa fa-envelope"></i>info@example.com</p>
+                                <p><i class="fa fa-phone-alt"></i>+256 780245409</p>
+                                <p><i class="fa fa-envelope"></i>alemibless@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -452,7 +452,7 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="#">Your Site Name</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="#">LOANA REALTY AND ENGINEERING CO LTD</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
                             <p>Designed By <a href="https://htmlcodex.com">HTML Codex</a></p>
