--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>LOANA REALTY AND ENGINEERING CO LTD </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Construction Company Website Template" name="keywords">
-        <meta content="Construction Company Website Template" name="description">
+        <meta content="LOANA REALTY AND ENGINEERING CO LTD" name="keywords">
+        <meta content="LOANA REALTY AND ENGINEERING CO LTD" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
